--- a/Vault.html
+++ b/Vault.html
@@ -6,9 +6,9 @@
     <title>Secure the Vault</title>
 </head>
 <body>
-    <h1>Test</h1>
+    <h1 align = "center">Secure the Vault</h1>
     <script src="Vault.js"></script>
-    <print>greeting</print>
+    <print>What is the combo?</print>
     
 </body>
 </html>
